--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@mui/styles": "^6.4.5",
     "@mui/x-data-grid": "^7.26.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
